--- a/29th sept3.html
+++ b/29th sept3.html
@@ -42,7 +42,7 @@
 	}
 	select
 	{
-		background-color: lightpink;
+		background-color: red;
 		width: 150px;
 		border-radius:5px ;
 	}
@@ -51,7 +51,7 @@
 	{
 		width: 500px;
 		height: 20px;
-		background-color: greenyellow;
+		background-color: blue;
 	}
 	h1
 	{
