update abaaaar korlaaaaaaaam

--- a/29th sept3.html
+++ b/29th sept3.html
@@ -22,7 +22,7 @@
 	input[type="button"]:focus
 	{
 		background-color: yellowgreen;
-		color: white;
+		color: yellow;
 		border-radius: 5px;
 		padding: 2px;
 		width: 100px;
