--- a/29th sept3.html
+++ b/29th sept3.html
@@ -7,8 +7,8 @@
 
 	body 
 	{
-		margin: 20px 500px;
-		padding: 20px;
+		margin: 20px 300px;
+		padding: 50px;
 	}
 
 	input[type="text"]:focus
@@ -22,7 +22,7 @@
 	input[type="button"]:focus
 	{
 		background-color: yellowgreen;
-		color: white;
+		color: green;
 		border-radius: 5px;
 		padding: 2px;
 		width: 100px;
