--- a/29th sept3.html
+++ b/29th sept3.html
@@ -17,11 +17,11 @@
 	}
 	input[type="number"]:focus
 	{
-		background-color: yellow;
+		background-color: green;
 	}
 	input[type="button"]:focus
 	{
-		background-color: yellowgreen;
+		background-color: brown;
 		color: yellow;
 		border-radius: 5px;
 		padding: 2px;
